--- a/CCFS Tickets/Src/Ticket Information.fx.yaml
+++ b/CCFS Tickets/Src/Ticket Information.fx.yaml
@@ -3297,94 +3297,6 @@
             Width: =Parent.Width/2
             ZIndex: =5
 
-            MessageEntry_1 As groupContainer.manualLayoutContainer:
-                AlignInContainer: =AlignInContainer.SetByContainer
-                BorderColor: =RGBA(214, 221, 224, 1)
-                BorderThickness: =1
-                DropShadow: =DropShadow.Semilight
-                LayoutMinHeight: =150
-                LayoutMinWidth: =250
-                RadiusBottomLeft: =4
-                RadiusBottomRight: =4
-                RadiusTopLeft: =4
-                RadiusTopRight: =4
-                Visible: =NewAttachementContainerVisble
-                Width: =Parent.Width
-                ZIndex: =1
-
-                Icon15_1 As icon.Cancel:
-                    BorderColor: =RGBA(0, 89, 178, 1)
-                    BorderThickness: =2
-                    Color: =RGBA(247, 116, 38, 1)
-                    DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                    DisabledColor: =RGBA(244, 244, 244, 1)
-                    Fill: =RGBA(255, 255, 255, 1)
-                    Height: =31
-                    Icon: =Icon.Cancel
-                    OnSelect: =Set(NewAttachementContainerVisble,false)
-                    Width: =49
-                    X: =147
-                    Y: =116
-                    ZIndex: =4
-
-                AddMediaWithImage1 As group:
-                    Height: =5
-                    Width: =5
-                    X: =40
-                    Y: =40
-                    ZIndex: =4
-
-                    UploadedImage1 As image:
-                        BorderColor: =RGBA(0, 89, 178, 1)
-                        DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                        DisabledFill: =RGBA(244, 244, 244, 1)
-                        Height: =116
-                        Image: =If(IsBlank(ButtonCanvas2_1.Media), SampleImage, ButtonCanvas2_1.Media)
-                        ImagePosition: =ImagePosition.Fill
-                        OnSelect: =
-                        Width: =196
-                        ZIndex: =2
-
-                    ButtonCanvas2_1 As addMedia:
-                        BorderColor: =RGBA(0, 89, 178, 1)
-                        Color: =RGBA(0, 0, 0, 1)
-                        Fill: =RGBA(40, 134, 222, 1)
-                        Height: =34
-                        OnChange: |
-                            =
-                        OnSelect: |
-                            =Set(
-                                UploadedImage1Var,
-                                JSON(
-                                    UploadedImage1.Image,
-                                    JSONFormat.IncludeBinaryData
-                                )
-                            );
-                            Set(
-                                UploadedImage1VarTrimmed,
-                                Mid(
-                                    UploadedImage1Var,
-                                    2,
-                                    Len(UploadedImage1Var) - 2
-                                )
-                            );
-                            ProcessTicketData_Add_Attachment.Run(
-                                Int(Ticket_ID_DataCard2.Default),
-                                ButtonCanvas2_1.FileName,
-                                UploadedImage1VarTrimmed
-                            );
-                            Refresh(Ticket_Attachments);
-                            Set(
-                                NewAttachementContainerVisble,
-                                false
-                            );
-                            Reset(ButtonCanvas2_1);
-                        Size: =10
-                        UseMobileCamera: =true
-                        Width: =147
-                        Y: =116
-                        ZIndex: =3
-
             Label18_10 As label:
                 Align: =Align.Center
                 BorderColor: =RGBA(0, 89, 178, 1)
@@ -5227,4 +5139,109 @@
             Width: =ButtonCanvas2.Width
             X: =587
             ZIndex: =4
+
+    MessageEntry_3 As groupContainer.manualLayoutContainer:
+        BorderColor: =RGBA(214, 221, 224, 1)
+        BorderThickness: =1
+        DropShadow: =DropShadow.Semilight
+        Fill: =RGBA(214, 221, 224, 1)
+        Height: =366
+        RadiusBottomLeft: =4
+        RadiusBottomRight: =4
+        RadiusTopLeft: =4
+        RadiusTopRight: =4
+        Visible: =NewAttachementContainerVisble
+        Width: =Parent.Width/2
+        X: =(App.Width - MessageEntry_3.Width) /2
+        Y: =(App.Height- MessageEntry_3.Height) /2
+        ZIndex: =5
+
+        Label18_29 As label:
+            Align: =Align.Center
+            BorderColor: =RGBA(0, 89, 178, 1)
+            Color: =RGBA(204, 214, 224, 1)
+            DisabledColor: =RGBA(166, 166, 166, 1)
+            Fill: =RGBA(102, 133, 163, 1)
+            Height: =30
+            PaddingBottom: =7.67
+            PaddingLeft: =7.67
+            PaddingRight: =4.63
+            PaddingTop: =4.63
+            Size: = Min('Asset Dashboard'.Width / 40,18)
+            Text: ="Attachments"
+            Width: =Parent.Width
+            X: =0.00
+            ZIndex: =3
+
+        Icon15_3 As icon.Cancel:
+            BorderColor: =RGBA(0, 89, 178, 1)
+            Color: =RGBA(255, 255, 255, 1)
+            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+            DisabledColor: =RGBA(244, 244, 244, 1)
+            Fill: =RGBA(102, 133, 163, 1)
+            Height: =Label18_29.Height
+            Icon: =Icon.Cancel
+            OnSelect: =Set(NewAttachementContainerVisble,false)
+            Width: =32
+            X: =651
+            ZIndex: =4
+
+        AddMediaWithImage1_2 As group:
+            Height: =5
+            Width: =5
+            X: =40
+            Y: =40
+            ZIndex: =7
+
+            UploadedImage1_2 As image:
+                BorderColor: =RGBA(0, 89, 178, 1)
+                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                DisabledFill: =RGBA(244, 244, 244, 1)
+                Height: =MessageEntry_3.Height-Label18_29.Height
+                Image: =If(IsBlank(ButtonCanvas2_3.Media), SampleImage, ButtonCanvas2_3.Media)
+                ImagePosition: =ImagePosition.Fill
+                OnSelect: =
+                Width: =683
+                Y: =Label18_29.Y + Label18_29.Height +5
+                ZIndex: =5
+
+            ButtonCanvas2_3 As addMedia:
+                BorderColor: =RGBA(0, 89, 178, 1)
+                Color: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(40, 134, 222, 1)
+                Height: =MessageEntry_3.Height-Label18_29.Height
+                OnChange: |
+                    =
+                OnSelect: |
+                    =Set(
+                        UploadedImage1Var,
+                        JSON(
+                            UploadedImage1_2.Image,
+                            JSONFormat.IncludeBinaryData
+                        )
+                    );
+                    Set(
+                        UploadedImage1VarTrimmed,
+                        Mid(
+                            UploadedImage1Var,
+                            2,
+                            Len(UploadedImage1Var) - 2
+                        )
+                    );
+                    ProcessTicketData_Add_Attachment.Run(
+                        Int(Ticket_ID_DataCard2.Default),
+                        ButtonCanvas2_3.FileName,
+                        UploadedImage1VarTrimmed
+                    );
+                    Refresh(Ticket_Attachments);
+                    Set(
+                        NewAttachementContainerVisble,
+                        false
+                    );
+                    Reset(ButtonCanvas2_3);
+                Size: =10
+                UseMobileCamera: =true
+                Width: =683
+                Y: =Label18_29.Y + Label18_29.Height +5
+                ZIndex: =6
 
