--- a/CCFS Tickets/Src/Ticket Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Ticket Dashboard.fx.yaml
@@ -414,7 +414,7 @@
                     BorderColor: =RGBA(0, 89, 178, 1)
                     DelayItemLoading: =true
                     Height: =Parent.Height
-                    Items: |-
+                    Items: |
                         =Switch(
                             VarSelectedTab,
                             1,
@@ -424,6 +424,7 @@
                                     Ticket_ID,
                                     SortOrder.Descending
                                 ),
+                                (UserAdmin = 1 Or Site_ID = UserSite) And
                                 (Private <> "1")And (Ticket_Status_ID <> "3" And Ticket_Status_ID <> "7") And
                                 (EnableTicketFilterChk_1.Checked = false Or TextInputCanvas_KeywordSearch.Value in Subject Or TextInputCanvas_KeywordSearch.Value in Ticket_Body || TextInputCanvas_KeywordSearch.Value = Blank())
                             ),
@@ -434,6 +435,7 @@
                                     Ticket_ID,
                                     SortOrder.Descending
                                 ),
+                                (UserAdmin = 1 Or Site_ID = UserSite) And
                                 (Ticket_Status_ID = "3" Or Ticket_Status_ID = "7") And (EnableTicketFilterChk_1.Checked = false Or Ticket_Status_ID = Text(DropdownStatusFilter_1.Selected.ID) || DropdownStatusFilter_1.Selected.ID = Blank()),
                                 Assigned_Email = User().Email Or Ticket_Contact_Email = User().Email,
                                 (Private <> "1"),
@@ -446,6 +448,7 @@
                                     Ticket_ID,
                                     SortOrder.Descending
                                 ),
+                                (UserAdmin = 1 Or Site_ID = UserSite) And
                                 (EstimatedCompletionDateAsInt <= Value(
                                     Text(
                                         Today(),
@@ -463,6 +466,7 @@
                                     Ticket_ID,
                                     SortOrder.Descending
                                 ),
+                                (UserAdmin = 1 Or Site_ID = UserSite) And
                                 ((Assigned_Email = User().Email And Ticket_Status_ID = "5") Or (Ticket_Contact_Email = User().Email And Ticket_Status_ID = "4")) And (Ticket_Status_ID <> "3" And Ticket_Status_ID <> "7"),
                                 (EnableTicketFilterChk_1.Checked = false Or Ticket_Status_ID = Text(DropdownStatusFilter_1.Selected.ID) || DropdownStatusFilter_1.Selected.ID = Blank()),
                                 (Private <> "1"),
@@ -475,6 +479,7 @@
                                     Ticket_ID,
                                     SortOrder.Descending
                                 ),
+                                (UserAdmin = 1 Or Site_ID = UserSite) And
                                 (UserAdmin = 1 Or Assigned_Email = User().Email Or Ticket_Contact_Email = User().Email) And (Private = "1"),
                                 (EnableTicketFilterChk_1.Checked = false Or Ticket_Status_ID = Text(DropdownStatusFilter_1.Selected.ID) || DropdownStatusFilter_1.Selected.ID = Blank()),
                                 (EnableTicketFilterChk_1.Checked = false Or TextInputCanvas_KeywordSearch.Value in Subject Or TextInputCanvas_KeywordSearch.Value in Ticket_Body || TextInputCanvas_KeywordSearch.Value = Blank())
@@ -486,6 +491,7 @@
                                     Ticket_ID,
                                     SortOrder.Descending
                                 ),
+                                (UserAdmin = 1 Or Site_ID = UserSite) And
                                 ((Assigned_Email = User().Email) And (Ticket_Status_ID <> "3" And Ticket_Status_ID <> "7")),
                                 (EnableTicketFilterChk_1.Checked = false Or Ticket_Status_ID = Text(DropdownStatusFilter_1.Selected.ID) || DropdownStatusFilter_1.Selected.ID = Blank()),
                                 (Private <> "1"),
@@ -498,6 +504,7 @@
                                     Ticket_ID,
                                     SortOrder.Descending
                                 ),
+                                (UserAdmin = 1 Or Site_ID = UserSite) And
                                 (Site_ID = UserSite And (Ticket_Status_ID <> "3" And Ticket_Status_ID <> "7")),
                                 (EnableTicketFilterChk_1.Checked = false Or Ticket_Status_ID = Text(DropdownStatusFilter_1.Selected.ID) || DropdownStatusFilter_1.Selected.ID = Blank()),
                                 (Private <> "1"),
