--- a/CCFS Tickets/CanvasManifest.json
+++ b/CCFS Tickets/CanvasManifest.json
@@ -139,6 +139,7 @@
     "Ticket Information",
     "Asset Dashboard",
     "Site Message Dashboard",
-    "Vendor Dashboard"
+    "Vendor Dashboard",
+    "Dashboard_1"
   ]
 }
